--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lyve",
-  "version": "1.0.0",
-  "description": "linea layer AMM on Optimism",
+  "version": "2.0.0",
+  "description": "linea layer lending on Optimism",
   "directories": {
     "lib": "lib"
   },
@@ -20,7 +20,7 @@
     "dotenv": "^16.3.1",
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
-    "hardhat": "^2.18.1",
+    "hardhat": "^2.22.3",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.9",
     "mocha-chai-jest-snapshot": "^1.1.4",
